# lcd_nametag

./: CONTRIBUTING.md  README.md
firmware/: .dockerignore  Dockerfile  README.md
firmware/docker/: avr-gcc.config
firmware/src/: .clang-format  .gitignore  cross.ini  debug.h  main.c  meson.build
firmware/src/jpg/: binread.h  common.h  decode.c  decode.h  header.c  header.h  jpg_image.c  jpg_image.h  test_decode.c
firmware/src/jpg/header/: segments.c  segments.h
firmware/src/jpg/internal/: binread.h  header.c  header.h  jpg_image.h  memory.c  memory.h
firmware/src/jpg/internal/header/: quantization_table.c  quantization_table.h  segments.c  segments.h
